Trying to fix safari overlap again

--- a/style.css
+++ b/style.css
@@ -77,3 +77,10 @@ body {
     display: none;
   }
 }
+
+@media (pointer: coarse) and (orientation: landscape) {
+  #game {
+    height: calc(100dvh - env(safe-area-inset-top, 45px));
+    width: calc((100dvh - env(safe-area-inset-top, 45px)) * (4 / 3));
+  }
+}
